--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 section {
   padding: 3rem 2rem;
   margin: 0 auto;
-  max-width: 1200px;
+  max-width: 1100px;
 }
 
 .header {
@@ -72,4 +72,44 @@ section {
 .icons img:hover {
   width: 40px;
   height: 40px;
+}
+
+.btn{
+    background: var(--main-color);
+    color: var(--white);
+    padding: 1rem 3rem;
+    font-size:  1.7rem;
+    cursor: pointer;
+    margin-top: 1rem;
+    display: inline-block;
+}
+
+.home-container{
+    background: url("./assets/images/home-img.jpg");
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
+}
+
+.home-container section{
+    display: flex;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.content{
+    max-width: 60rem;
+}
+
+.content h3{
+    color: var(--white);
+    font-size: 5rem;
+}
+
+.content p{
+    color: var(--white);
+    font-size: 1.8rem;
+    font-weight: 100;
+    line-height: 1.8;
+    padding: 1rem 0;
 }
