--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ section {
   right: 0;
   z-index: 99;
   border-bottom: var(--border);
+  background-color: var(--bg);
 }
 
 .header section {
@@ -82,6 +83,10 @@ section {
     cursor: pointer;
     margin-top: 1rem;
     display: inline-block;
+    border-radius: 10px;
+}
+.btn:hover{
+  letter-spacing: 0.15rem;
 }
 
 .home-container{
@@ -112,4 +117,43 @@ section {
     font-weight: 100;
     line-height: 1.8;
     padding: 1rem 0;
+}
+
+.title{
+  font-size: 4rem;
+  color: var(--main-color);
+  text-align: center;
+  text-transform: uppercase;
+  border-bottom: 2rem;
+}
+
+.title span{
+  color: var(--white);
+  text-transform: uppercase;
+}
+
+.about .row{
+display: flex;
+align-items: center;
+background-color: var(--black);
+gap: 1rem;
+}
+
+.about .row .content{
+  padding: 2rem;
+}
+
+.about .row .content h3{
+  font-size: 3rem;
+  color: var(--white);
+  
+  
+}
+
+.about .row .content p{
+  font-size: 1.6rem;
+  color: var(--white);
+  padding: 1rem 0;
+  line-height: 1.8;
+font-weight: 300;
 }
