--- a/style.css
+++ b/style.css
@@ -108,13 +108,13 @@ section {
 
 .content h3{
     color: var(--white);
-    font-size: 5rem;
+    font-size: 3.5rem;
 }
 
 .content p{
     color: var(--white);
     font-size: 1.8rem;
-    font-weight: 100;
+    font-weight: 300;
     line-height: 1.8;
     padding: 1rem 0;
 }
@@ -156,4 +156,47 @@ gap: 1rem;
   padding: 1rem 0;
   line-height: 1.8;
 font-weight: 300;
+}
+
+.menu .box-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));  
+  gap: 1.5rem;
+}
+
+.menu .box-container .box{
+  text-align: center;
+  border: var(--border);
+  padding: 5rem;
+  cursor: pointer;
+}
+
+.menu .box-container .box img {
+  height: 10rem;
+}
+
+.menu .box-container .box h3{
+  color: var(--white);
+  font-size: 2rem;
+  padding: 1rem 0;
+}
+
+.menu .box-container .box .price{
+  color: var(--white);
+  font-size: 2.5rem;
+  padding: 0.5rem 0;
+}
+
+.menu .box-container .box .price span{
+  font-size:1.5rem;
+  text-decoration: line-through;
+  font-weight: 100;
+}
+
+.menu .box-container .box:hover{
+  background-color: var(--white);
+}
+
+.menu .box-container .box:hover>*{
+  color: var(--black) !important;
 }
